# python-app-template

./: .gitignore  pyproject.toml
app/: config.py  logger.py  main.py  middleware.py  router.py
tests/: test_app.py
