[project]
name = "python-app-template"
version = "0.1.0"
description = ""
authors = [
    {name = "Thomas Kling", email = "thomas.kling@banno.com"}
]
readme = "README.md"
requires-python = ">3.12"
dependencies = [
    "pytest>=8.3.3,<9",
    "fastapi>=0.115.6",
    "uvicorn>=0.32.1",
    "structlog>=24.4.0",
    "asgi-correlation-id>=4.3.4",
    "starlette>=0.41.3",
    "httpx>=0.28.1",
    "prometheus-client>=0.21.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "basedpyright>=1.23.0",
]

[project.scripts]
start = "app.main:main"

[tool.basedpyright]
typeCheckingMode = "basic"
